# mads

./: Cargo.toml  README.md
.github/workflows/: build.yaml  test.yaml
app/: Cargo.toml
app/src/: distributions.rs  main.rs
examples/: README.md
examples/clohessy_wiltshire/: main.rs  my_scenario.rs  my_scenario_results.csv
examples/clohessy_wiltshire/tools/: plot.py
examples/double_integrator_lqr/: main.rs  my_scenario.rs
examples/linear_dynamics/: Cargo.toml  linear_scenario.rs  main.rs
examples/linear_dynamics/src/: linear_scenario.rs  main.rs
examples/nonlinear_dynamics/: Cargo.toml  main.rs  nonlinear_scenario.rs  resources.rs
examples/nonlinear_dynamics/src/: main.rs  nonlinear_scenario.rs
examples/simple_example/: Cargo.toml  main.rs
examples/simple_example/src/: main.rs
formflight/: Cargo.toml
formflight/src/: main.rs  plot.rs
formflight/src/controls/: models.rs
formflight/src/dynamics/models/: linear.rs
formflight/src/dynamics/models/nonlinear/: inverted_pendulum.rs
formflight/src/ecs/: resources.rs
formflight/src/ecs/systems/: dynamics_systems.rs  simple_systems.rs
formflight/src/math/: riccati.rs
formflight/src/scenarios/tracking/: error_dynamics_systems.rs  error_system.rs  logger.rs  mod.rs  tracking_scenario.rs
formflight/src/scenarios/tracking/plotter/: plot.py
mads/: Cargo.toml
mads/src/: controls.rs  physics.rs
mads/src/dynamics/models/nonlinear/: double_pendulum.rs
mads/src/ecs/: systems.rs
mads/src/physics/: collisions.rs
mads/src/simulator/: configuration.rs
mads/src/util/: misc.rs
src/: configuration.rs  controls.rs  dynamics.rs  ecs.rs  lib.rs  linalg.rs  log.rs  math.rs  scenario.rs  scene.rs  setup.rs  simulation.rs  simulator.rs  state.rs  util.rs
src/controls/: lqr.rs  models.rs
src/controls/models/: lqr.rs  mod.rs
src/dynamics/: closed_form.rs  controls.rs  double_integrator.rs  euler_hill.rs  linear_system.rs  mod.rs  nonlinear_system.rs  statespace.rs
src/dynamics/controls/: lqr.rs
src/dynamics/models/: mod.rs  nonlinear.rs
src/dynamics/models/linear/: double_integrator.rs  euler_hill.rs  inverted_pendulum.rs  mod.rs
src/dynamics/models/nonlinear/: clohessy_wiltshire.rs  double_pendulum.rs  inverted_pendulum.rs  mod.rs
src/ecs/: component.rs  components.rs  entity.rs  generational_index.rs  resources.rs  sim_state.rs  system.rs  world.rs
src/ecs/systems/: dynamics_systems.rs  mod.rs  simple.rs  simple_systems.rs  simulate.rs
src/log/: logger.rs  mod.rs  simulation_logger.rs
src/math/: coordinate_frame.rs  euler.rs  frames.rs  integrators.rs  ivp_solver.rs  mod.rs  riccati.rs
src/math/integrate/: euler.rs  mod.rs  runge_kutta.rs
src/math/ivp_solver/: euler.rs  rk45.rs
src/scene/: node.rs  object.rs  scenario.rs  scene.rs  scene_graph.rs  scene_manager.rs  simulation_scene.rs
src/simulator/: configuration.rs  ecs.rs  mod.rs  setup.rs  simulation.rs  simulator.rs  state.rs
src/util/: matrix_util.rs  save.rs
tests/: integration_test.rs
