[package]
name = "FormFlight-rs"
version = "0.1.0"
authors = ["kachark <kkachar@hotmail.com>"]
edition = "2018"

[lib]
name = "formflight"
path = "src/lib.rs"

[[bin]]
name = "formflight"
path = "src/bin/app/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.0"
nalgebra = { version = "0.27.1", features = ["serde-serialize"] }
lapack = "0.19.0"
lapack-src = { version = "0.8", features = ["accelerate"] }
legion = "0.4.0"
uuid = "0.8"
ordered-float = "2.5.1"
numpy = "0.13"
csv = "1.1"
serde = "1.0.126"
serde_json = "1.0"
# osqp = "0.6.2" # Quadratic program optimization

# bin
plotters = "^0.3.1"
#polars = "0.14.2"

[dependencies.pyo3]
version = "0.13.2"
features = ["auto-initialize"]
