[package]
name = "FormFlight-rs"
version = "0.1.0"
authors = ["kachark <kkachar@hotmail.com>"]
edition = "2018"

[lib]
name = "formflight"
path = "src/lib.rs"

[[bin]]
name = "formflight"
path = "src/bin/app/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.0"
nalgebra = { version = "0.29", features = ["serde-serialize"] }
lapack = "0.19.0"
lapack-src = { version = "0.8", features = ["accelerate"] }
legion = "0.4.0"
uuid = "0.8"
csv = "1.1"
serde = "1.0.126"
serde_json = "1.0"
rust-optimal-transport = { path = "../rust-optimal-transport" }
# rust-optimal-transport = { git = "https://github.com/kachark/rust-optimal-transport", branch = "add_unbalanced_OT" }

# bin
plotters = "^0.3.1"
#polars = "0.14.2"


