[package]
name = "mads"
version = "0.1.0"
authors = ["kachark <kkachar@hotmail.com>"]
edition = "2018"

[lib]
name = "mads"
path = "src/lib.rs"

[dependencies]
thiserror = "1.0"
approx = "0.5.0"
nalgebra = { version = "0.29", features = ["serde-serialize"] }
lapack = "0.19.0"
lapack-src = { version = "0.8", features = ["accelerate"] }
legion = "0.4.0"
uuid = "0.8"
csv = "1.1"
serde = "1.0.126"
serde_json = "1.0"
