[package]
name = "app"
version = "0.1.0"
authors = ["kachark <kkachar@hotmail.com>"]
edition = "2018"

[dependencies]
formflight = { path = "../formflight" }
nalgebra = { version = "0.29", features = ["serde-serialize"] }
legion = "0.4.0"
uuid = "0.8"
csv = "1.1"
serde = "1.0.126"
serde_json = "1.0"
plotters = "^0.3.1"
rust-optimal-transport = { path = "../../rust-optimal-transport" }
# rust-optimal-transport = { git = "https://github.com/kachark/rust-optimal-transport", branch = "main" }
