[package]
name = "formflight"
version = "0.1.0"
authors = ["kachark <kkachar@hotmail.com>"]
edition = "2018"

[lib]
name = "formflight"
path = "src/lib.rs"

[dependencies]
approx = "0.5.0"
nalgebra = { version = "0.29", features = ["serde-serialize"] }
lapack = "0.19.0"
lapack-src = { version = "0.8", features = ["accelerate"] }
legion = "0.4.0"
uuid = "0.8"
csv = "1.1"
serde = "1.0.126"
serde_json = "1.0"
rust-optimal-transport = { path = "../../rust-optimal-transport" }
# rust-optimal-transport = { git = "https://github.com/kachark/rust-optimal-transport", branch = "main" }

# bin
plotters = "^0.3.1"
# polars = "0.14.2"


